Added /system endpoints
